--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,5 +13,24 @@
   <%= @user.admin %>
 </p>
 
+<%if current_user.admin%>
+    <p>
+      <strong>movil_number:</strong>
+      <%= @user.movil_number %>
+    </p>
+    <p>
+      <strong>Url:</strong>
+      <%= @user.url_callback %>
+    </p>
+    <p>
+      <strong>Low account:</strong>
+      <%= @user.low_account %>
+    </p>
+    <p>
+      <strong>Api Key:</strong>
+      <%= @user.api_key if !@user.api_setting.nil? %>
+    </p>
+<%end%>
+
 <%= link_to t('edit'), edit_user_path(@user) %> |
 <%= link_to t('back').html_safe, users_path %>
