added search in view users

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,12 @@
 <h1><%= t(:listing_users).html_safe %> (<%= User.count %>)</h1>
 
-<table>
+<%= form_tag @users_path, :method => 'get' do %>
+      <%= text_field_tag :search,params[:search]%>
+      <%= submit_tag :search,:name=>nil%>
+<%end%>
+
+<br/>
+<table style="border-top: 1px solid black;">
   <thead>
     <tr>
       <th><%= t('user') %></th>
