--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_tag @users_path, :method => 'get' do %>
       <%= text_field_tag :search,params[:search]%>
-      <%= submit_tag :search,:name=>nil%>
+      <%= submit_tag t('search').to_sym,:name=>nil%>
 <%end%>
 
 <br/>
