Fix #243 translate movil number

--- a/app/views/devise/registrations/_get_api_key.html.erb
+++ b/app/views/devise/registrations/_get_api_key.html.erb
@@ -1,4 +1,4 @@
-Información de acceso vía API:
+<%= t('api_information')%>
 <br/>
 <p style="margin-left: 8px;">API Key: <%= current_user.api_key if !current_user.api_key.blank?%> <%= 'Empty' if current_user.api_key.blank?%> </p>
 
