--- a/app/views/_top_menu.html.erb
+++ b/app/views/_top_menu.html.erb
@@ -1,7 +1,11 @@
 <div class="menu">
   <%= link_to t('home'), main_app.root_path %>
-  <%= link_to t('single_mode').html_safe, main_app.new_single_message_path %>
-  <%= link_to t('massive_mode').html_safe, main_app.new_bulk_message_path %>
+  <% if current_user.unit_view%>
+     <%= link_to t('link_uv'), main_app.message_all_index_path%>
+  <%else%>
+      <%= link_to t('single_mode').html_safe, main_app.new_single_message_path %>
+      <%= link_to t('massive_mode').html_safe, main_app.new_bulk_message_path %>
+  <%end%>
   <%= link_to t('lists'), main_app.lists_path %>
   <%= link_to t('summary'), main_app.summary_delivery_reports_path -%>
   <%= link_to t('all_sms'), main_app.delivery_reports_path %>
