added form and query for prefixtable

--- a/app/views/_admin_links.html.erb
+++ b/app/views/_admin_links.html.erb
@@ -4,4 +4,5 @@
 <%= link_to t('gateways'), main_app.gateways_path %>
 <%= link_to t('user').pluralize, main_app.users_path %>
 <%= link_to t('observers').pluralize, main_app.observers_path %>
+<%= link_to t('prefix'),main_app.prefix_index_path%>
 <%= link_to t(:jobs), main_app.delayed_web_path%>
