--- a/app/views/gateways/show.html.erb
+++ b/app/views/gateways/show.html.erb
@@ -34,5 +34,5 @@
 
 <%= link_to t(:edit), edit_gateway_path(@gateway) %> |
 <%= link_to t(:back).html_safe, gateways_path %> |
-<%= link_to "Nuevo prefijo", prefix_new_path%>
+<%= link_to "Nuevo prefijo", new_prefix_path%>
 
