--- a/app/views/prefix/_form_edit.html.erb
+++ b/app/views/prefix/_form_edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag prefix_path, :method => :post do %>
+<%= form_tag prefix_path(params[:id]), :method => :put do %>
     <% if @prefix_t.errors.any? %>
         <div id="error_explanation">
           <h2>
@@ -16,11 +16,11 @@
 
     <div class="field">
       <%= label_tag :Prefix%><br/>
-      <%= text_field_tag :prefix, params[:prefix]%>
+      <%= text_field_tag :prefix, params[:prefix], :value=>@prefix_t.country_code%>
     </div>
     <div class="field">
       <%= label_tag :Country %><br/>
-      <%= text_field_tag :country, params[:country]%>
+      <%= text_field_tag :country, params[:country],:value=>@prefix_t.country%>
     </div>
     <%= submit_tag :create%>
 <%end%>
