--- a/app/views/gateways/new.html.erb
+++ b/app/views/gateways/new.html.erb
@@ -1,5 +1,5 @@
 <h1><%=t(:new_item, item: t(:gateway))%></h1>
 
-<%= render 'form' %>
+<%= render 'form', :edit=>0 %>
 
 <%= link_to t(:back).html_safe, gateways_path %>
