--- a/app/views/gateways/show.html.erb
+++ b/app/views/gateways/show.html.erb
@@ -15,15 +15,17 @@
 
   <tr>
     <th>prefix</th>
-    <th>price</th>
+    <th>price_system</th>
     <th>price_cost</th>
-    <th>price_cost</th>
+    <th></th>
+    <th></th>
   </tr>
   <% @gateway.gateway_prefixtables.each do |grt|%>
       <tr>
         <td><%= grt.prefix_cc%></td>
         <td><%= grt.price_system%></td>
         <td><%= grt.price_cost%></td>
+        <td><%= link_to t(:edit), edit_gateway_path(@gateway,:id_prefix=>grt.prefix_table.id,:price_sys=>grt.price_system) %></td>
         <td></td>
       </tr>
   <%end%>
