--- a/app/views/prefix/index.html.erb
+++ b/app/views/prefix/index.html.erb
@@ -27,5 +27,5 @@
 
 <p><%= will_paginate @prefix_all %></p>
 
-<p><%= link_to 'new', new_prefix_path%></p>
+<p><%= link_to 'new', :controller => :prefix, :action => :new%></p>
 
