--- a/app/views/prefix/show.html.erb
+++ b/app/views/prefix/show.html.erb
@@ -11,4 +11,4 @@
 
 
 <%= link_to t('edit'), edit_prefix_path(:id=>@prefix_t.id) %> |
-<%= link_to t('back').html_safe, prefix_path %>
+<%= link_to t('back').html_safe, prefix_index_path %>
