added translate field movil number

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
 <%end%>
 <br/>
 <%= form_tag @users_path, :method => 'get' do %>
-    <%= text_field_tag :number,params[:number],:placeholder=>'movil number'%>
+    <%= text_field_tag :number,params[:number],:placeholder=>t('phone')%>
     <%= submit_tag t('search').to_sym,:name=>nil%>
 <%end%>
 
