--- a/app/views/_admin_links.html.erb
+++ b/app/views/_admin_links.html.erb
@@ -5,4 +5,5 @@
 <%= link_to t('user').pluralize, main_app.users_path %>
 <%= link_to t('observers').pluralize, main_app.observers_path %>
 <%= link_to t('TR'),main_app.table_routes_path%>
+<%= link_to 'Roles',main_app.roles_path%>
 <%= link_to t(:jobs), main_app.delayed_web_path%>
