--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,16 +2,24 @@
 
 <%= image_tag 'thumb.gif'%>
 
+<style>
+    table,
+    th,
+    td {
+        border: 0px solid white;
+        border-collapse: collapse;
+    }
 
+</style>
 <%hash_count_sms = current_user.query_home%>
 <table>
-  <thead>
+
   <tr>
-    <th>Caracteristicas</th>
-    <th>Valor</th>
+    <th></th>
+    <th></th>
 
   </tr>
-  </thead>
+
   <tbody>
       <tr>
         <td>Pluie Versi&oacute;n</td>
@@ -37,21 +45,19 @@
         <td><%= link_to t('last_hour').html_safe, dr_summary_url(:time_span => 'Last hour')%></td>
         <td><%= hash_count_sms[:l_hour]%></td>
       </tr>
+      <tr>
+        <td>Estadísticas</td>
+        <td>
+          <%= link_to t('today').html_safe, dr_summary_url(:time_span => 'today')%>: <%= hash_count_sms[:today]%><br/>
+          <%= link_to t('last_48_hour').html_safe, dr_summary_url(:time_span => 'h_48')%>: <%= hash_count_sms[:h_48]%><br/>
+          <%= link_to t('this_week').html_safe, dr_summary_url(:time_span => 't_week')%>: <%= hash_count_sms[:t_week]%><br/>
+          <%= link_to t('last_15_days').html_safe, dr_summary_url(:time_span => 'd_15')%>: <%=  hash_count_sms[:d_15]%><br/>
+          <%= link_to t('this_month').html_safe, dr_summary_url(:time_span => 'this month')%>: <%= hash_count_sms[:t_month]%><br/>
+          <%= link_to t('last_60_days').html_safe, dr_summary_url(:time_span => 'd_60')%>:: <%= hash_count_sms[:d_60]%><br/>
+          <%= link_to t('this_year').html_safe, dr_summary_url(:time_span => 't_year')%>: <%= hash_count_sms[:t_year]%><br/>
+          <%= link_to t('last_500').html_safe, dr_summary_url(:time_span => 'd_500')%>: <%= hash_count_sms[:d_500]%><br/>
+        </td>
+      </tr>
 
   </tbody>
   </table>
-
-<div>
-  <p>Estadísticas</p>
-  <ul style="list-style-type: none;">
-
-  <li><%= link_to t('today').html_safe, dr_summary_url(:time_span => 'today')%>: <%= hash_count_sms[:today]%></li>
-  <li><%= link_to t('last_48_hour').html_safe, dr_summary_url(:time_span => 'h_48')%>: <%= hash_count_sms[:h_48]%></li>
-  <li><%= link_to t('this_week').html_safe, dr_summary_url(:time_span => 't_week')%>: <%= hash_count_sms[:t_week]%></li>
-  <li><%= link_to t('last_15_days').html_safe, dr_summary_url(:time_span => 'd_15')%>: <%=  hash_count_sms[:d_15]%></li>
-  <li><%= link_to t('this_month').html_safe, dr_summary_url(:time_span => 'this month')%>: <%= hash_count_sms[:t_month]%></li>
-  <li><%= link_to t('last_60_days').html_safe, dr_summary_url(:time_span => 'd_60')%>:: <%= hash_count_sms[:d_60]%></li>
-  <li><%= link_to t('this_year').html_safe, dr_summary_url(:time_span => 't_year')%>: <%= hash_count_sms[:t_year]%></li>
-  <li><%= link_to t('last_500').html_safe, dr_summary_url(:time_span => 'd_500')%>: <%= hash_count_sms[:d_500]%></li>
-</ul>
-</div>
