--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,7 +33,7 @@
 
     <div><%= f.label :current_password %> <i>(<%= t('devise.registrations.edit.we_need_your_current_password_to_confirm_your_changes')%>)</i><br />
       <%= f.password_field :current_password, autocomplete: "off" %></div>
-
+    <br/>
     <div><%= f.submit t('devise.registrations.edit.update') %></div>
 <% end %>
 
@@ -47,7 +47,7 @@
 <h3><%= t('devise.registrations.edit.cancel_my_account')%></h3>
 
 
-<p><%= t('devise.registrations.edit.unhappy')%>? <%= button_to t('devise.registrations.edit.cancel_my_account'), registration_path(resource_name), data: { confirm: I18n.translate('devise.registrations.edit.are_you_sure') }, method: :delete %>
+<p><%= t('devise.registrations.edit.unhappy')%>? <%= button_to t('devise.registrations.edit.cancel_my_account'), registration_path(resource_name), data: { confirm: I18n.translate('devise.registrations.edit.are_you_sure') }, method: :delete, :style=>"color:red;" %>
 </p>
 
 
