--- a/app/views/_admin_links.html.erb
+++ b/app/views/_admin_links.html.erb
@@ -6,4 +6,5 @@
 <%= link_to t('observers').pluralize, main_app.observers_path %>
 <%= link_to t('TR'),main_app.table_routes_path%>
 <%= link_to 'Roles',main_app.roles_path%>
+<%= link_to 'Logs',main_app.historic_logs_path%>
 <%= link_to t(:jobs), main_app.delayed_web_path%>
