--- a/app/views/historic_logs/index.html.erb
+++ b/app/views/historic_logs/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Listing historic_logs</h1>
 
-<%= form_tag 'historic_logs/names', :method => :post do %>
+<%= form_tag historic_logs_names_path, :method => :post do %>
 
 <%= select_tag(:user_id_historic,
-               options_from_collection_for_select(User.all, "id", "email"),:style=>"width:126px;")
+               options_from_collection_for_select(User.all, "id", "email"),:style=>"width:206px;")
 %>
     <%= submit_tag :search%>
 <%end%>
@@ -46,4 +46,4 @@
 <br>
 <p><%= will_paginate @historic_logs %></p>
 
-
+<%= link_to 'Todos', historic_logs_path%>
