--- a/app/views/historic_logs/show.html.erb
+++ b/app/views/historic_logs/show.html.erb
@@ -19,6 +19,11 @@
   <%= @historic_log.parameters_not_comun %>
 </p>
 <p>
+  <strong>Method http:</strong>
+  <%= @historic_log.method_http %>
+</p>
+
+<p>
   <strong>Full Path:</strong>
   <%= @historic_log.full_path %>
 </p>
